Thu Apr 21 18:10:13 2005  Jeff Parsons <j.parsons@vanderbilt.edu>

        * DAnCE/examples/Hello/Hello_Base/Hello_Base.idl:
        * DAnCE/examples/HelloHello_Base/Hello_Base.mpc:
        * DAnCE/examples/HelloReceiver/Receiver.idl:
        * DAnCE/examples/HelloReceiver/Receiver.mpc:
        * DAnCE/examples/HelloSender/Sender.idl:
        * DAnCE/examples/HelloSender/Sender.mpc:
        
          Made cosmetic changes to all files, and added explicit
          specification of header and inline files in MPC 
          projects. Also added -Sc command line option to the
          IDL compiler, to suppress generation of the TIE
          classes.

Thu Apr 21 17:40:12 2005  Jeff Parsons <j.parsons@vanderbilt.edu>

        * CCF/CCF/CIDL/Traversal/Elements.cpp:
        * CCF/CCF/IDL3/Traversal/EventType.cpp:
        
          Removed these files, since they contain nothing but
          empty namespaces.
          
        * CCF/CCF/CIDL/CIDL.vcproj:
        * CCF/CCF/IDL3/IDL3.vcproj:
        
          Removed the above files from the appropriate projects.

Thu Apr 21 14:31:21 2005  Jeff Parsons <j.parsons@vanderbilt.edu>

        * DAnCE/ExecutionManager/ExecutionManager.mpc:
        * DAnCE/Plan_Launcher/Plan_Launcher.mpc:
        
          Changes to eliminate some warnings in the Debian LInux build.

Thu Apr 21 09:06:58 2005  Jeff Parsons <j.parsons@vanderbilt.edu>

        * Added UUID generation for the object id when creating 
          event consumers, similar to that already added for facets.
          This change eliminates the error of repeated connection
          to the same event consumer instance when multiple
          instances and connections are intended. Thanks to
          Steve Baker <steven_d_baker@raytheon.com> for reporting
          the problem.

Thu Apr 21 09:04:32 CDT 2005  Will Otte  <wotte@dre.vanderbilt.edu>
	
	* DAnCE/examples/Hello/descriptors/TestNodeManagerMap.dat
	* DAnCE/examples/Hello/descriptors/run_test.pl
	