@@ -66,7 +66,6 @@ namespace CIAO
     ACE_THROW_SPEC ((CORBA::SystemException,
                      Components::RemoveFailure))
   {
-    Components::SessionComponent_var temp = this->get_executor ();
     /*
     Components::FacetDescriptions_var facets =
       this->get_all_facets (ACE_ENV_SINGLE_ARG_PARAMETER);
@@ -89,6 +88,8 @@ namespace CIAO
       this->container_->deactivate_facet (oid ACE_ENV_ARG_PARAMETER);
     }
     */
+
+    Components::SessionComponent_var temp = this->get_executor ();
     temp->ccm_passivate (ACE_ENV_SINGLE_ARG_PARAMETER);
 
     CORBA::Object_var objref =
