@@ -3,6 +3,8 @@
 #include "CCM_Container.idl"
 #include "CCM_Base.idl"
 #include "CCM_Event.idl"
+#include "tao/PortableServer/PortableServer_include.pidl"
+#include <orb.idl>
 
 module CIAO
 {
@@ -11,7 +13,8 @@ module CIAO
     ::Components::ConsumerDescriptions get_registered_consumers
         (in ::Components::FeatureName publisher_name)
       raises (::Components::InvalidName, ::Components::InvalidConnection);
-    void deactivate_facet (in ::Components::FeatureName name);
-    void update_port_activator (in ::Components::FeatureName name);
+    void deactivate_facet (in PortableServer::ObjectId oid);
+    void update_port_activator (in PortableServer::ObjectId oid);
+    void remove_facet (in Object reference);
   };
 };
