@@ -36,13 +36,15 @@ namespace CIAO
             typename COMP_VAR>
   void
   Upgradeable_Context_Impl<BASE_CTX, SVNT, COMP, COMP_VAR>::deactivate_facet (
-      const char* obj_id
+      const PortableServer::ObjectId &oid
       ACE_ENV_ARG_DECL
     )
     ACE_THROW_SPEC ((CORBA::SystemException))
   {
+    /*
     PortableServer::ObjectId_var oid =
         PortableServer::string_to_ObjectId (obj_id);
+    */
 
     this->container_->deactivate_facet (oid ACE_ENV_ARG_PARAMETER);
   }
@@ -53,13 +55,34 @@ namespace CIAO
             typename COMP_VAR>
   void
   Upgradeable_Context_Impl<BASE_CTX, SVNT, COMP, COMP_VAR>::
-     update_port_activator (
-           const char* obj_id
+     remove_facet (
+           CORBA::Object_ptr reference
            ACE_ENV_ARG_DECL)
     ACE_THROW_SPEC ((CORBA::SystemException))
   {
     PortableServer::ObjectId_var oid =
+      this->container_->the_facet_cons_POA ()->reference_to_id
+         (reference ACE_ENV_ARG_PARAMETER);
+    this->update_port_activator (oid ACE_ENV_ARG_PARAMETER);
+    this->deactivate_facet (oid ACE_ENV_ARG_PARAMETER);
+  }
+
+  template <typename BASE_CTX, 
+            typename SVNT, 
+            typename COMP, 
+            typename COMP_VAR>
+  void
+  Upgradeable_Context_Impl<BASE_CTX, SVNT, COMP, COMP_VAR>::
+     update_port_activator (
+           const PortableServer::ObjectId &oid
+           ACE_ENV_ARG_DECL)
+    ACE_THROW_SPEC ((CORBA::SystemException))
+  {
+    /*
+    PortableServer::ObjectId_var oid =
         PortableServer::string_to_ObjectId (obj_id);
+    */
+
     CIAO::Servant_Activator *sa =
         this->container_->ports_servant_activator ();
     sa->update_port_activator (oid ACE_ENV_ARG_PARAMETER);
