@@ -1,3 +1,14 @@
+Sat Apr 23 13:43:22 2005  Jai Balasubramanian  <jai@dre.vanderbilt.edu>
+
+	* DAnCE/ciao/Container_Base.cpp:
+	* DAnCE/ciao/Servant_Impl_Base.cpp:
+	* DAnCE/ciao/UpgradeableContext.idl:
+	* DAnCE/ciao/Upgradeable_Context_Impl_T.cpp:
+	* DAnCE/ciao/Upgradeable_Context_Impl_T.h:
+
+	  Made some changes to the CIAO infrastructure to efficiently
+	  handle updating the facets when the component is swapped.
+
 Thu Apr 21 18:10:13 2005  Jeff Parsons <j.parsons@vanderbilt.edu>
 
         * DAnCE/examples/Hello/Hello_Base/Hello_Base.idl:
